--- a/src/Component/HeaderControl.latte
+++ b/src/Component/HeaderControl.latte
@@ -2,4 +2,4 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>{$adminPage->getTitle()|firstUpper}</title>
 <link rel="stylesheet" href="{$basePath}/assets/css/app.css?{filemtime(WWW_DIR . '/backend/assets/css/app.css')}">
-<script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
+<script src="https://assets.sellastica.com/web/production/jquery/3.2.1/jquery.js"></script>
