--- a/src/Component/FoundationModalFooter.latte
+++ b/src/Component/FoundationModalFooter.latte
@@ -1,11 +1,11 @@
 <div class="modal-footer">
-	<div class="row align-justify">
+	<div class="grid-x grid-margin-x align-justify">
 		{if isset($cancelOnly) && $cancelOnly}
-			<div class="column text-right">
+			<div class="cell text-right">
 				<a class="button hollow" data-close>{_admin.globals.close}</a>
 			</div>
 		{else}
-			<div class="column small-order-2">
+			<div class="cell shrink small-order-2">
 				{if !isset($submit) || $submit}
 					<button n:name="submit" class="button button-wide button-submittable float-right">
 						<i class="fa fa-spinner fa-spin"></i>
@@ -15,7 +15,7 @@
 					</button>
 				{/if}
 			</div>
-			<div class="column large-7">
+			<div class="cell shrink">
 				{if !isset($cancel) || $cancel}
 					<a class="button hollow" data-close>{_admin.globals.cancel}</a>
 				{/if}
