--- a/src/Component/Pagination.latte
+++ b/src/Component/Pagination.latte
@@ -1,10 +1,10 @@
 {if $pagination->getPageCount() > 1}
-	<div class="row">
-		<div class="column small-12 large-6">
+	<div class="grid-x grid-margin-x">
+		<div class="cell small-12 large-6">
 			{*<a href="#" class="button hollow">Next 20</a>*}
 		</div>
 
-		<div class="column small-12 large-6">
+		<div class="cell small-12 large-6">
 			<ul class="pagination float-right" role="navigation" aria-label="Pagination" data-items-count="{$pagination->getItemCount()}">
 
 				{* previous page *}
