--- a/src/Component/Pagination.latte
+++ b/src/Component/Pagination.latte
@@ -1,11 +1,11 @@
 {if $pagination->getPageCount() > 1}
-	<div class="grid-x grid-margin-x">
-		<div class="cell small-12 large-6">
+	<div class="grid-x grid-margin-x row">
+		<div class="cell small-12 large-6 col-sm-12 col-lg-6">
 			{*<a href="#" class="button hollow">Next 20</a>*}
 		</div>
 
-		<div class="cell small-12 large-6">
-			<ul class="pagination float-right" role="navigation" aria-label="Pagination" data-items-count="{$pagination->getItemCount()}">
+		<div class="cell small-12 large-6 col-sm-12 col-lg-6">
+			<ul class="pagination float-right" aria-label="Pagination" data-items-count="{$pagination->getItemCount()}">
 
 				{* previous page *}
 				{if $pagination->getPreviousPage()}
@@ -33,7 +33,7 @@
 				{foreach $pages as $i}
 					{if $pagination->getPage() == $i}
 						<li class="current">
-							<span class="show-for-sr">You're on page</span> {$i}
+							<a href="{$presenter->link('this', ['page' => $i])}">{$i}</a>
 						</li>
 					{else}
 						<li><a href="{$presenter->link('this', ['page' => $i])}" aria-label="Page {$i}">{$i}</a></li>
