--- a/src/Component/Pagination.latte
+++ b/src/Component/Pagination.latte
@@ -1,8 +1,17 @@
 {if $pagination->getPageCount() > 1}
 	<div class="grid-x grid-margin-x row">
-		<div class="cell small-12 large-6 col-sm-12 col-lg-6">
-			{*<a href="#" class="button hollow">Next 20</a>*}
+		<div class="cell small-12 medium-3 large-2 col-sm-12 col-lg-6">
+			{form jumpToPage}
+				<div class="input-group">
+					{input page class => 'input-group-field'}
+					<button n:name="submit" class="button input-group-button">
+						<i class="fa fa-angle-double-right"></i>
+					</button>
+				</div>
+			{/form}
 		</div>
+
+		<div class="cell large-4"></div>
 
 		<div class="cell small-12 large-6 col-sm-12 col-lg-6">
 			<ul class="pagination float-right" aria-label="Pagination" data-items-count="{$pagination->getItemCount()}">
@@ -11,7 +20,7 @@
 				{if $pagination->getPreviousPage()}
 					<li class="pagination-previous">
 						<a href="{$presenter->link('this', ['page' => $pagination->getPreviousPage()])}" aria-label="Next page">
-							<i class="fa fa-arrow-left"></i><span class="show-for-sr">Previous page</span>
+							<i class="fa fa-arrow-left"></i>
 						</a>
 					</li>
 				{/if}
@@ -25,7 +34,11 @@
 						<li><a href="{$presenter->link('this', ['page' => $i])}" aria-label="Page {$i}">{$i}</a></li>
 					{/foreach}
 					{if $firstPage > 2}
-						<li class="ellipsis" aria-hidden="true"><i class="fa fa-ellipsis-h"></i></li>
+						<li class="ellipsis pagination-dots" aria-hidden="true">
+							<a>
+								<i class="fa fa-ellipsis-h"></i>
+							</a>
+						</li>
 					{/if}
 				{/if}
 
@@ -42,7 +55,11 @@
 
 				{if $lastPage < $pagination->getLastPage()}
 					{if $lastPage < $pagination->getLastPage() - 1}
-						<li class="ellipsis" aria-hidden="true"><i class="fa fa-ellipsis-h"></i></li>
+						<li class="ellipsis pagination-dots" aria-hidden="true">
+							<a>
+								<i class="fa fa-ellipsis-h"></i>
+							</a>
+						</li>
 					{/if}
 					{foreach [$pagination->getLastPage()] as $i}
 						<li><a href="{$presenter->link('this', ['page' => $i])}" aria-label="Page {$i}">{$i}</a></li>
@@ -53,7 +70,7 @@
 				{if $pagination->getNextPage()}
 					<li class="pagination-next">
 						<a href="{$presenter->link('this', ['page' => $pagination->getNextPage()])}" aria-label="Next page">
-							<span class="show-for-sr">Next page</span><i class="fa fa-arrow-right"></i>
+							<i class="fa fa-arrow-right"></i>
 						</a>
 					</li>
 				{/if}
