--- a/src/Component/FoundationModalBootstrap.latte
+++ b/src/Component/FoundationModalBootstrap.latte
@@ -1,5 +1,5 @@
 <div id="{$id}" class="modal fade in {ifset $size}{$size} {/ifset}" tabindex="-1" role="dialog" aria-hidden="true">
-	<div class="modal-dialog" role="document">
+	<div class="modal-dialog{if !empty($large)} modal-lg{/if}" role="document">
 		<div class="modal-content">
 
 			{* header *}
