--- a/src/Component/FoundationModalBootstrap.latte
+++ b/src/Component/FoundationModalBootstrap.latte
@@ -2,25 +2,35 @@
 	<div class="modal-dialog{if !empty($large)} modal-lg{/if}" role="document">
 		<div class="modal-content">
 
-			{* header *}
+            {* header *}
 			<div class="modal-header">
 				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
 					<span aria-hidden="true">&times;</span>
 				</button>
-				{ifset $title}
+                {ifset $title}
 					<h5 class="modal-title">{_$title}</h5>
-				{/ifset}
+                {/ifset}
 			</div>
 
-			{* body *}
+            {* body *}
 			<div class="modal-body">
-				{ifset $content}
-					{if !empty($noescape)}
-						{$content|noescape}
-					{else}
-						{$content}
-					{/if}
-				{/ifset}
+
+                {* ajax spinner *}
+				<div class="is-loading">
+					<div class="spinner mt-50 mb-50 text-center" role="status">
+						<i class="fa fa-spin fa-spinner fa-2x txt-primary"></i>
+					</div>
+				</div>
+
+				<div class="is-loaded">
+                    {ifset $content}
+                        {if !empty($noescape)}
+                            {$content|noescape}
+                        {else}
+                            {$content}
+                        {/if}
+                    {/ifset}
+				</div>
 			</div>
 		</div>
 	</div>
